Some refactors, begin with the shop cv now visible without log in